add table markup

--- a/timesheet-demo/Content/Site.css
+++ b/timesheet-demo/Content/Site.css
@@ -28,6 +28,10 @@ textarea {
     grid-column: 1;
 }
 
+.text-box {
+    width: 140px;
+}
+
 .table-container {
     position: relative;
     grid-column: 2 / 4;
