--- a/timesheet-demo/Views/Home/Index.cshtml
+++ b/timesheet-demo/Views/Home/Index.cshtml
@@ -12,18 +12,18 @@
         <form data-bind="submit: submitTask">
             <div class="form-element-container">
                 <span>
-                    @*<select data-bind="options: jobs, optionsText: function(job) { return job.name() },
-                                         value: selectedJob, optionsCaption: 'Select Job'"></select>*@
-                    <select data-bind="options: jobs, optionsText: 'jobName',
+                    <select data-bind="options: jobList, optionsText: 'jobName',
                                        value: selectedJob, optionsCaption: 'Select Job'"></select>
-                    <input class="text-box" data-bind="value: jobName" /><button data-bind="click: addJob">Add Job</button>
+                    <input class="text-box" data-bind="value: jobName" />
+                    <button data-bind="click: addJob">Add Job</button>
                 </span>
             </div>
             <div class="form-element-container">
                 <span>
                     <select data-bind="options: taskList, optionsText: 'taskName',
-                                       optionsCaption: 'Select Task'"></select>
-                    <input class="text-box" data-bind="value: taskName" /><button data-bind="click: addTask">Add Task</button>
+                                       value: selectedTask, optionsCaption: 'Select Task'"></select>
+                    <input class="text-box" data-bind="value: taskName" />
+                    <button data-bind="click: addTask">Add Task</button>
                 </span>
             </div>
             <div class="form-element-container">
@@ -35,26 +35,27 @@
                 <button class="submit-button" data-bind="click: submitTask">Add to Timesheet</button>
             </div>
         </form>
-        <span data-bind="text: labelText"></span>
+        @*<span data-bind="text: labelText"></span>*@
     </div>
     <div class="table-container">
         <h2>Timesheet:</h2>
-        <table class="table" data-bind="foreach: jobs">
-            <tr>
-                <th>
-                    <span data-bind="text: jobName"></span>
-                    <a class="badge badge-pill danger" data-bind="click: $root.removeJob">remove</a>
-                </th> 
-                <th>Hours</th>
-            </tr>
-            <tbody data-bind="template: { name: 'taskTemplate', foreach: job.tasks}"></tbody>
+        <table class="table">
+            <tbody data-bind="foreach: jobs">
+                <tr>
+                    <th>
+                        <span data-bind="text: jobName"></span>
+                        <a class="badge badge-pill danger" data-bind="click: $root.removeJob">remove</a>
+                    </th>
+                    <th>Hours</th>
+                </tr>
+                <tr data-bind="foreach: tasks">
+                    <td>
+                        <span data-bind="text: taskName"></span>
+                    </td>
+                </tr>
+            </tbody>
         </table>
-        <script id="taskTemplate" type="text/html">
-            <tr>
-                <td data-bind="text: name"></td>
-                <td data-bind="text: hours"></td>
-            </tr>
-        </script>
+
     </div>
 </div>
 
