--- a/timesheet-demo/Views/Home/Index.cshtml
+++ b/timesheet-demo/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         <form data-bind="submit: submitTask">
             <div class="form-element-container">
                 <span>
-                    <select data-bind="options: jobList, optionsText: 'jobName',
+                    <select data-bind="options: jobList, optionsText: 'name',
                                        value: selectedJob, optionsCaption: 'Select Job'"></select>
                     <input class="text-box" data-bind="value: jobName" />
                     <button data-bind="click: addJob">Add Job</button>
@@ -20,7 +20,7 @@
             </div>
             <div class="form-element-container">
                 <span>
-                    <select data-bind="options: taskList, optionsText: 'taskName',
+                    <select data-bind="options: taskList, optionsText: 'name',
                                        value: selectedTask, optionsCaption: 'Select Task'"></select>
                     <input class="text-box" data-bind="value: taskName" />
                     <button data-bind="click: addTask">Add Task</button>
@@ -35,7 +35,7 @@
                 <button class="submit-button" data-bind="click: submitTask">Add to Timesheet</button>
             </div>
         </form>
-        @*<span data-bind="text: labelText"></span>*@
+        <span data-bind="text: errorLabel"></span>
     </div>
     <div class="table-container">
         <h2>Timesheet:</h2>
