--- a/timesheet-demo/Views/Home/Index.cshtml
+++ b/timesheet-demo/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                 <button class="submit-button" data-bind="click: submitTask">Add to Timesheet</button>
             </div>
         </form>
-        <span data-bind="text: errorLabel"></span>
+        <span data-bind="text: promptLabel"></span>
     </div>
     <div class="table-container">
         <h2>Timesheet:</h2>
